updating website based on Derek and Ian's suggestions

--- a/about.html
+++ b/about.html
@@ -24,28 +24,31 @@
   <body>
   
   <!-- ~~~~~~~~~~~~~~ NAV BAR ~~~~~~~~~~~~~~~~~~~~~ -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="index.html">
-             HYP
-            </a>
-          </div>
-
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="about.html">about</a></li>
-            <li><a href="products.html">products</a></li>
-          </ul>
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-green btn-default navbar-btn navbar-right">Interested?</a>
+  <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">
+            HYP
+          </a>
         </div>
-      </nav>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="about.html">about</a></li>
+          <li><a href="products.html">products</a></li>
+        </ul>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-green btn-default navbar-btn navbar-right">See Kickstarter</a>
+        <a class="btn btn-social-icon btn-facebook navbar-right" href="https://www.facebook.com/HYP-Salad-Topper-1381089681981796/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-facebook']);"><span class="fa fa-facebook"></span></a>
+         <a class="btn btn-social-icon btn-instagram navbar-right" href="https://www.instagram.com/hypfoods/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram"></span></a>
+       
+      </div>
+    </nav>
 
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~ WHO WE ARE ~~~~~~~~~~~~~~~~~ -->
     <div class="about-hero">
@@ -61,6 +64,7 @@
     <div class="the-solution">
       <div class="container">
         <div class="small-image small-image-solution">
+          <img class="small-image" src="images/dressing-packet.jpg">
         </div><div class="about-text about-text-one">
           <h3>The Solution</h3>
           <p>The solution that we divised is a salad topping or dip that is jampacked with 10g of protein per serving plus all the other good stuff like gluten free, non-gmo, organic and vegetarian.
@@ -72,55 +76,57 @@
     <div class="the-team clearfix">
       <div class="container">
         <h3>Meet the Team</h3>
-        <div class="col-md-4 team-member-col">
+        <div class="col-md-4 clearfix team-member-col">
           <img class="team-member" src="images/stein.jpg"/>
           <h4>Stein Kretsinger</h4>
           <p>
-            <span class="bold">Director of Finances</span> <br>Stein graduated from the University of Virginia first with a BS and then an MS in Systems Engineering. He is now the proud father of two pygmy goats. 
+            <span class="bold">Founder</span> <br>Stein graduated from the University of Virginia first with a BS and then an MS in Systems Engineering. He is now the proud father of two pygmy goats. 
           </p>
         </div>
-        <div class="col-md-4 team-member-col">
+        <div class="col-md-4 clearfix team-member-col">
           <img class="team-member" src="images/derek.jpg"/>
           <h4>Derek Mansfield</h4>
           <p>
-            <span class="bold">Director of Operations</span> <br>Derek earned his MBA from Northwestern University's Kellogg School of Management. Since then, Derek has has managed a variety of different positions involving retail.
+            <span class="bold">Founder</span> <br> Derek was most recently the president of a Relay Foods -- a mobile grocery startup but more recently has enjoyed spending his time dressing in a full tux (complete with tophat and monocle) and speaking in a terrible British accent. 
           </p>
         </div>
-        <div class="col-md-4 team-member-col">
+        <div class="col-md-4 clearfix team-member-col">
           <img class="team-member" src="images/ian.jpg"/>
           <h4>Ian Pasquarelli</h4>
           <p>
-            <span class="bold">Director of Product Development</span> <br>Ian earned an MS in Agriculture and Life Sciences, Food Safety and was most recently involved in founding The Kitchen Network - a food tech startup.
+            <span class="bold">Founder</span> <br>Ian is a food tech entrepreneur with a BS in Nutrition, an MS in Food Safety, 10+ years' experience in the food industry, and 30+ years eating tasty food. He enjoys being addressed by nicknames such as "chef" and sometimes "prop boy."
           </p>
         </div>
-        <div class="col-md-4 team-member-col">
+        <div class="col-md-4 clearfix team-member-col">
           <img class="team-member" src="images/yaeji.jpg"/>
           <h4>Yae Ji Cha</h4>
           <p>
-          <span class="bold">Head of Brand Development</span><br>Yae Ji recently graduated from the University of Virginia with a BA in media studies. She spent the summer of 2017 working as a Digital Marketing Fellow at HackCville.
+          <span class="bold">Sent the Emails</span><br>Yae Ji recently graduated from the University of Virginia with a BA in media studies. She spent the summer of 2017 working as a Digital Marketing Fellow at HackCville.
           </p>
         </div>
-        <div class="col-md-4 team-member-col">
+        <div class="col-md-4 clearfix team-member-col">
           <img class="team-member" src="images/matt.jpg"/>
           <h4>Matthew Han</h4>
-          <p><span class="bold">Head of Media</span><br>Matt recently finished his first year at the University of Virginia and is planning to major in Computer Science and Studio Art. Matt spent summer 2017 as a Web Development Fellow at HackCville.</p>
+          <p><span class="bold">Took the Pictures</span><br>Matt recently finished his first year at the University of Virginia and is planning to major in Computer Science and Studio Art. Matt spent summer 2017 as a Web Development Fellow at HackCville.</p>
         </div>
-        <div class="col-md-4 team-member-col">
+        <div class="col-md-4 clearfix team-member-col">
           <img class="team-member" src="images/chap2.jpg"/>
           <h4>Chapman Monroe</h4>
-          <p><span class="bold">Head of Web Development</span><br>Chapman just finished her second year at the University of Virginia and is majoring in systems engineering. She spent the summer of 2017 working as a Web Development Fellow at HackCville.</p>
+          <p><span class="bold">Built the Site</span><br>Chapman just finished her second year at the University of Virginia and is majoring in systems engineering. She spent the summer of 2017 working as a Web Development Fellow at HackCville.</p>
         </div>
       </div>
     </div>
     <div class="the-solution">
       <div class="container"> 
         <div class="small-image small-image-hidden small-image-mission">
+          <img class="small-image" src="images/cutting-dill.jpg">
         </div><div class="about-text about-text-two">
           <h3>Our Mission</h3>
           <p>
             Our mission is to make healthy eating worthwhile, delicious, and convenient. Using our knowledge of food science and nutrition, we aim to design the best tasting and most filling salad topper you’ve ever had.
           </p>
         </div><div class="small-image small-image-shown small-image-mission">
+          <img class="small-image" src="images/cutting-dill.jpg">
         </div>
       </div>
     </div>  
@@ -129,11 +135,11 @@
 
    <div class="cta-container">
       <div class="container">
-         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta">Interested? Checkout our Kickstarter &#8594;</a>
-         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive">Checkout our Kickstarter &#8594;</a>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta">Interested? Check out our Kickstarter &#8594;</a>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive">Check out our Kickstarter &#8594;</a>
          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive-two">Kickstarter &#8594;</a>
-         <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/HYP-Salad-Topper-1381089681981796/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-facebook']);"><span class="fa fa-facebook"></span></a>
-         <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/hypsaladtopper/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram"></span></a>
+         <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/HYP-Salad-Topper-1381089681981796/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-facebook']);"><span class="fa fa-facebook fa-2x"></span></a>
+         <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/hypfoods/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram fa-2x"></span></a>
       </div>
     </div>
 
