--- a/products.html
+++ b/products.html
@@ -25,54 +25,60 @@
   
   <!-- ~~~~~~~~~~~~~~ NAV BAR ~~~~~~~~~~~~~~~~~~~~~ -->
 	 <nav class="navbar navbar-default navbar-fixed-top">
-	      <div class="container-fluid">
-	        <div class="navbar-header">
-	          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	            <span class="sr-only">Toggle navigation</span>
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	          </button>
-	        <a class="navbar-brand" href="index.html">
-            	HYP
-          	</a>
-	        </div>
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">
+            HYP
+          </a>
+        </div>
 
-	        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	        <ul class="nav navbar-nav">
-	          <li><a href="about.html">about</a></li>
-	          <li class="active"><a href="products.html">products</a></li>
-	        </ul>
-	        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-green btn-default navbar-btn navbar-right">Interested?</a>
-	      </div>
-	    </nav>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="about.html">about</a></li>
+          <li><a href="products.html">products</a></li>
+        </ul>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-green btn-default navbar-btn navbar-right">See Kickstarter</a>
+        <a class="btn btn-social-icon btn-facebook navbar-right" href="https://www.facebook.com/HYP-Salad-Topper-1381089681981796/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-facebook']);"><span class="fa fa-facebook"></span></a>
+         <a class="btn btn-social-icon btn-instagram navbar-right" href="https://www.instagram.com/hypfoods/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram"></span></a>
+       
+      </div>
+    </nav>
 
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~ DRESSINGS ~~~~~~~~~~~~~~~~~~~~~~~ -->
     <div class="container">
 	    <div class="dressing-row clearfix">
-	    	<div class="col-md-4 dressing-row-image dressing-row-image-top">
+	    	<div class="col-md-4 clearfix dressing-row-image dressing-row-image-top">
 	    		<img class="packaging" src="images/vegan-caesar.jpg">
 	    	</div>
 	    	<div class="col-md-8 dressing-info">
 	    		<h3>
-	    			Vegan Caesar Dressing
+	    			Creamy Caesar Dressing
 	    		</h3>
+	    		<p class="ingredients">
+	    			A classic redesigned for this generation of healthy snackers. Creamy, rich, and a hint of garlic makes our Creamy Caesar perfect for salads and your choice of snack.
+	    		</p>
 	    		<div class="button-container container dressing-buttons">
 			      <p class="button-list dressing-button-list">
 			        <button type="button" class="btn btn-lg btn-blue">10g Protein</button>
 			        <button type="button" class="btn btn-lg btn-blue">Non GMO</button>
-			        <button type="button" class="btn btn-lg btn-blue">Vegan</button>
+			        <button type="button" class="btn btn-lg btn-blue">Vegetarian</button>
 			        <button type="button" class="btn btn-lg btn-blue">Gluten Free</button>
 			        <button type="button" class="btn btn-lg btn-blue">Organic</button>
 			      </p>
 			    </div>
 			    <p class="ingredients">
-			    	Ingredients: water, dijon mustard, almond butter, bragg aminos, lemon juice, nutritional yeast, extra virgin olive oil, vegetable protein powder, garlic 
+			    	Ingredients: water, dijon mustard, almond butter, bragg aminos, lemon juice, nutritional yeast, extra virgin olive oil, organic grass-fed whey protein poweder, garlic 
 			    </p>
 	    	</div>
 	    </div>
 
-	    <div class="dressing-row clearfix">
+	    <div class="dressing-row clearfix the-solution">
 	    	<div class="col-md-4 dressing-row-image">
 	    		<img class="packaging" src="images/soy-ginger.jpg">
 	    	</div>
@@ -80,17 +86,43 @@
 	    		<h3>
 	    			Soy Ginger Dressing
 	    		</h3>
+	    		<p>
+	    			Soy Ginger will definitely pack a punch of flavor to your salad. Perhaps the most dynamic of our dressings, use Soy Ginger on your salads, rice, and even as a marinade. Garlic, ginger, and soy sauce work in perfect harmony to create a savory dressing you won’t stop reaching for.
+	    		</p>
 	    		<div class="button-container container dressing-buttons">
 			      <p class="button-list dressing-button-list">
 			        <button type="button" class="btn btn-lg btn-blue">10g Protein</button>
 			        <button type="button" class="btn btn-lg btn-blue">Non GMO</button>
-			        <button type="button" class="btn btn-lg btn-blue">Vegan</button>
+			        <button type="button" class="btn btn-lg btn-blue">Vegetarian</button>
 			        <button type="button" class="btn btn-lg btn-blue">Gluten Free</button>
 			        <button type="button" class="btn btn-lg btn-blue">Organic</button>
 			      </p>
 	    		</div>
 	    		<p class="ingredients">
-	    			Ingredients: organic chickpea, water,  vegetable protein powder, extra virgin olive oil, sesame oil, rice wine vinegar, bragg aminos, chile garlic sauce, ground ginger 
+	    			Ingredients: organic chickpea, water, organic grass-fed whey protein powder, extra virgin olive oil, sesame oil, rice wine vinegar, bragg aminos, chile garlic sauce, ground ginger 
+	    		</p>
+	    	</div>
+	    </div>
+
+	    <div class="dressing-row clearfix">
+	    	<div class="col-md-4 dressing-row-image">
+	    		<img class="packaging" src="images/cuke-dill.jpg">
+	    	</div>
+	    	<div class="col-md-8 dressing-info">
+	    		<h3>
+	    			Cucumber Dill Dressing
+	    		</h3>
+	    		<div class="button-container container dressing-buttons">
+			      <p class="button-list dressing-button-list">
+			        <button type="button" class="btn btn-lg btn-blue">10g Protein</button>
+			        <button type="button" class="btn btn-lg btn-blue">Non GMO</button>
+			        <button type="button" class="btn btn-lg btn-blue">Vegetarian</button>
+			        <button type="button" class="btn btn-lg btn-blue">Gluten Free</button>
+			        <button type="button" class="btn btn-lg btn-blue">Organic</button>
+			      </p>
+	    		</div>
+	    		<p class="ingredients">
+	    			Ingredients: greek yogurt, diced cucumber, organic grass-fed whey protein powder, dill, lemon juice, garlic, salt, pepper 
 	    		</p>
 	    	</div>
 	    </div>
@@ -99,11 +131,11 @@
 
     <div class="cta-container">
       <div class="container">
-         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta">Interested? Checkout our Kickstarter &#8594;</a>
-         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive">Checkout our Kickstarter &#8594;</a>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta">Interested? Check out our Kickstarter &#8594;</a>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive">Check out our Kickstarter &#8594;</a>
          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive-two">Kickstarter &#8594;</a>
-         <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/HYP-Salad-Topper-1381089681981796/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-facebook']);"><span class="fa fa-facebook"></span></a>
-         <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/hypsaladtopper/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram"></span></a>
+         <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/HYP-Salad-Topper-1381089681981796/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-facebook']);"><span class="fa fa-facebook fa-2x"></span></a>
+         <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/hypfoods/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram fa-2x"></span></a>
       </div>
     </div>
 
