--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
           <li><a href="about.html">about</a></li>
           <li><a href="products.html">products</a></li>
         </ul>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-green btn-default navbar-btn navbar-right">Interested?</a>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-green btn-default navbar-btn navbar-right">See Kickstarter</a>
+        <a class="btn btn-social-icon btn-facebook navbar-right" href="https://www.facebook.com/HYP-Salad-Topper-1381089681981796/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-facebook']);"><span class="fa fa-facebook"></span></a>
+         <a class="btn btn-social-icon btn-instagram navbar-right" href="https://www.instagram.com/hypfoods/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram"></span></a>
+       
       </div>
     </nav>
 
@@ -104,7 +107,7 @@
           </div>
           <div class="col-sm-4 image-div"> 
             <h4>
-              Spice up healthy afternoon snacks by using HYP as a dip!  
+              Spruce up healthy afternoon snacks by using HYP as a dip!  
             </h4>
           </div>
         </div>
@@ -125,11 +128,11 @@
 
      <div class="cta-container">
       <div class="container">
-         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta">Interested? Checkout our Kickstarter &#8594;</a>
-         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive">Checkout our Kickstarter &#8594;</a>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta">Interested? Check out our Kickstarter &#8594;</a>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive">Check out our Kickstarter &#8594;</a>
          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive-two">Kickstarter &#8594;</a>
-         <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/HYP-Salad-Topper-1381089681981796/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-facebook']);"><span class="fa fa-facebook"></span></a>
-         <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/hypsaladtopper/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram"></span></a>
+         <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/HYP-Salad-Topper-1381089681981796/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-facebook']);"><span class="fa fa-facebook fa-2x"></span></a>
+         <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/hypfoods/" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-instagram']);"><span class="fa fa-instagram fa-2x"></span></a>
       </div>
     </div>
 
