added a salad image to the home page

--- a/index.html
+++ b/index.html
@@ -102,13 +102,29 @@
         </div>
 
         <div class="image-row clearfix">   
-          <div class="col-sm-8 desk">  
-            <img class="home-image home-image-long home-image-desk" src="images/desk.jpg">
-          </div>
-          <div class="col-sm-4 image-div"> 
+           <div class="col-sm-4 image-div image-div-hidden"> 
             <h4>
               Spruce up healthy afternoon snacks by using HYP as a dip!  
             </h4>
+          </div>
+          <div class="col-sm-8 desk">  
+            <img class="home-image home-image-long home-image-desk" src="images/desk.jpg">
+          </div>
+          <div class="col-sm-4 image-div image-div-shown"> 
+            <h4>
+              Spruce up healthy afternoon snacks by using HYP as a dip!  
+            </h4>
+          </div>
+        </div>
+
+        <div class="image-row clearfix"> 
+          <div class="col-sm-4 image-div"> 
+            <h4>
+              Pour over salads for a protein packed meal! 
+            </h4>
+          </div>
+          <div class="col-sm-8 image-div">  
+            <img class="home-image home-image-long home-image-desk" src="images/other-foods.jpg">
           </div>
         </div>
 
@@ -126,7 +142,7 @@
 
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~ CTA ~~~~~~~~~~~~~~~~~~~~~~~ -->
 
-     <div class="cta-container">
+    <div class="cta-container">
       <div class="container">
          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta">Interested? Check out our Kickstarter &#8594;</a>
          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZzL9fAMGSGxzv1El_elPHL1NvBfObmUKRZR4ZpBz0gleK9g/viewform" type="button" class="btn btn-lg btn-cta-responsive">Check out our Kickstarter &#8594;</a>
