--- a/products.html
+++ b/products.html
@@ -63,22 +63,35 @@
 	    		<p class="ingredients">
 	    			A classic redesigned for this generation of healthy snackers. Creamy, rich, and a hint of garlic makes our Creamy Caesar perfect for salads and your choice of snack.
 	    		</p>
-	    		<div class="button-container container dressing-buttons">
-			      <p class="button-list dressing-button-list">
-			        <button type="button" class="btn btn-lg btn-blue">10g Protein</button>
-			        <button type="button" class="btn btn-lg btn-blue">Non GMO</button>
-			        <button type="button" class="btn btn-lg btn-blue">Vegetarian</button>
-			        <button type="button" class="btn btn-lg btn-blue">Gluten Free</button>
-			        <button type="button" class="btn btn-lg btn-blue">Organic</button>
-			      </p>
+	    		<div class="button-container ingredients">
+			      <div class="row">
+			        <div class="col-md-2 icon">
+			          <i class="fa fa-bolt fa-3x" aria-hidden="true"></i>
+			          <p>10g Protein</p>
+			        </div><div class="col-md-2 icon">
+			          <i class="fa fa-heart fa-3x" aria-hidden="true"></i>
+			          <p>Non GMO</p>
+			        </div><div class="col-md-2 icon">
+			          <i class="fa fa-leaf fa-3x" aria-hidden="true"></i>
+			          <p>Vegetarian</p>
+			        </div><div class="col-md-2 icon icon-last">
+			          <i class="fa fa-cutlery fa-3x" aria-hidden="true"></i>
+			          <p>Gluten Free</p>
+			        </div><div class="col-md-2 icon icon-last">
+			          <i class="fa fa-globe fa-3x" aria-hidden="true"></i>
+			          <p>Organic</p>
+			        </div>
+			      </div>
 			    </div>
 			    <p class="ingredients">
 			    	Ingredients: water, dijon mustard, almond butter, bragg aminos, lemon juice, nutritional yeast, extra virgin olive oil, organic grass-fed whey protein poweder, garlic 
 			    </p>
 	    	</div>
 	    </div>
-
-	    <div class="dressing-row clearfix the-solution">
+	</div>
+	<div class="the-solution">
+	<div class="container">
+	    <div class="dressing-row clearfix">
 	    	<div class="col-md-4 dressing-row-image">
 	    		<img class="packaging" src="images/soy-ginger.jpg">
 	    	</div>
@@ -86,24 +99,37 @@
 	    		<h3>
 	    			Soy Ginger Dressing
 	    		</h3>
-	    		<p>
-	    			Soy Ginger will definitely pack a punch of flavor to your salad. Perhaps the most dynamic of our dressings, use Soy Ginger on your salads, rice, and even as a marinade. Garlic, ginger, and soy sauce work in perfect harmony to create a savory dressing you won’t stop reaching for.
+	    		<p class="ingredients">
+	    			Soy Ginger will definitely pack a punch of flavor to your salad. Perhaps the most dynamic of our dressings, use Soy Ginger on your salads, rice, and even as a marinade. Garlic, ginger, and chiles work in perfect harmony to create a savory dressing you won’t stop reaching for.
 	    		</p>
-	    		<div class="button-container container dressing-buttons">
-			      <p class="button-list dressing-button-list">
-			        <button type="button" class="btn btn-lg btn-blue">10g Protein</button>
-			        <button type="button" class="btn btn-lg btn-blue">Non GMO</button>
-			        <button type="button" class="btn btn-lg btn-blue">Vegetarian</button>
-			        <button type="button" class="btn btn-lg btn-blue">Gluten Free</button>
-			        <button type="button" class="btn btn-lg btn-blue">Organic</button>
-			      </p>
-	    		</div>
+	    		<div class="button-container ingredients">
+			      <div class="row">
+			        <div class="col-md-2 icon">
+			          <i class="fa fa-bolt fa-3x" aria-hidden="true"></i>
+			          <p>10g Protein</p>
+			        </div><div class="col-md-2 icon">
+			          <i class="fa fa-heart fa-3x" aria-hidden="true"></i>
+			          <p>Non GMO</p>
+			        </div><div class="col-md-2 icon">
+			          <i class="fa fa-leaf fa-3x" aria-hidden="true"></i>
+			          <p>Vegetarian</p>
+			        </div><div class="col-md-2 icon icon-last">
+			          <i class="fa fa-cutlery fa-3x" aria-hidden="true"></i>
+			          <p>Gluten Free</p>
+			        </div><div class="col-md-2 icon icon-last">
+			          <i class="fa fa-globe fa-3x" aria-hidden="true"></i>
+			          <p>Organic</p>
+			        </div>
+			      </div>
+			    </div>
 	    		<p class="ingredients">
 	    			Ingredients: organic chickpea, water, organic grass-fed whey protein powder, extra virgin olive oil, sesame oil, rice wine vinegar, bragg aminos, chile garlic sauce, ground ginger 
 	    		</p>
 	    	</div>
 	    </div>
-
+	</div>
+	</div>
+	<div class="container">
 	    <div class="dressing-row clearfix">
 	    	<div class="col-md-4 dressing-row-image">
 	    		<img class="packaging" src="images/cuke-dill.jpg">
@@ -112,15 +138,29 @@
 	    		<h3>
 	    			Cucumber Dill Dressing
 	    		</h3>
-	    		<div class="button-container container dressing-buttons">
-			      <p class="button-list dressing-button-list">
-			        <button type="button" class="btn btn-lg btn-blue">10g Protein</button>
-			        <button type="button" class="btn btn-lg btn-blue">Non GMO</button>
-			        <button type="button" class="btn btn-lg btn-blue">Vegetarian</button>
-			        <button type="button" class="btn btn-lg btn-blue">Gluten Free</button>
-			        <button type="button" class="btn btn-lg btn-blue">Organic</button>
-			      </p>
-	    		</div>
+	    		<p class="ingredients">
+	    			Refreshingly light and simple, our Cucumber Dill delivers a crisp and tart flavor. The cucumbers, lemon, and Greek yogurt are a perfect trio, and dill works to bring out the flavor of this dressing. This airy goodness will add the perfect touch to any salad or rice bowl.
+	    		</p>
+	    		<div class="button-container ingredients">
+			      <div class="row">
+			        <div class="col-md-2 icon">
+			          <i class="fa fa-bolt fa-3x" aria-hidden="true"></i>
+			          <p>10g Protein</p>
+			        </div><div class="col-md-2 icon">
+			          <i class="fa fa-heart fa-3x" aria-hidden="true"></i>
+			          <p>Non GMO</p>
+			        </div><div class="col-md-2 icon">
+			          <i class="fa fa-leaf fa-3x" aria-hidden="true"></i>
+			          <p>Vegetarian</p>
+			        </div><div class="col-md-2 icon icon-last">
+			          <i class="fa fa-cutlery fa-3x" aria-hidden="true"></i>
+			          <p>Gluten Free</p>
+			        </div><div class="col-md-2 icon icon-last">
+			          <i class="fa fa-globe fa-3x" aria-hidden="true"></i>
+			          <p>Organic</p>
+			        </div>
+			      </div>
+			    </div>
 	    		<p class="ingredients">
 	    			Ingredients: greek yogurt, diced cucumber, organic grass-fed whey protein powder, dill, lemon juice, garlic, salt, pepper 
 	    		</p>
