changed the fonts on the ingredients

--- a/about.html
+++ b/about.html
@@ -56,7 +56,8 @@
         <div class="big-image"></div>
         <div class="who-we-are-text">
           <h3>The Problem</h3>
-          <p>Salads are a great way to eat healthy... if they can keep you full and you don't waste your efforts on a fatty sugary dressing. We saw a place in the market for a dressing that not only doesn’t have all the nasty stuff, but actually adds the benefit of protein to keep you fuller longer.
+          <p>
+            Salads are great, and we should all eat more veggies, but not when they have you reaching for extra snacks because they never filled you up in the first place. We were frustrated by the lack of options on the market to make our salads both delicious and filling without unnecessary fats and sugars. That’s why we made HYP, for people like us and people like you.
           </p>
         </div>
       </div>
@@ -67,7 +68,8 @@
           <img class="small-image" src="images/dressing-packet.jpg">
         </div><div class="about-text about-text-one">
           <h3>The Solution</h3>
-          <p>The solution that we divised is a salad topping or dip that is jampacked with 10g of protein per serving plus all the other good stuff like gluten free, non-gmo, organic and vegetarian.
+          <p>
+            HYP was made from conversation. We talked to nutritionists, fitness experts, and most importantly our consumers to understand what a perfect dressing would look like. What we came up with was an organic, non-GMO, gluten free, and vegetarian salad dressing that packs 10g of protein per serving.
           </p>
           <a href="products.html">Checkout the product &#8594;</a>
         </div>
@@ -87,7 +89,7 @@
           <img class="team-member" src="images/derek.jpg"/>
           <h4>Derek Mansfield</h4>
           <p>
-            <span class="bold">Founder</span> <br> Derek was most recently the president of a Relay Foods -- a mobile grocery startup but more recently has enjoyed spending his time dressing in a full tux (complete with tophat and monocle) and speaking in a terrible British accent. 
+            <span class="bold">Founder</span> <br> Derek was most recently the president of a Relay Foods -- an e-commerce grocery site. But more recently, he has enjoyed spending his time dressing in a full tux (complete with tophat and monocle) and speaking in a terrible British accent. 
           </p>
         </div>
         <div class="col-md-4 clearfix team-member-col">
@@ -123,7 +125,10 @@
         </div><div class="about-text about-text-two">
           <h3>Our Mission</h3>
           <p>
-            Our mission is to make healthy eating worthwhile, delicious, and convenient. Using our knowledge of food science and nutrition, we aim to design the best tasting and most filling salad topper you’ve ever had.
+            <span class="bold">Our mission is to make healthy eating easy, delicious, and convenient.</span>
+            <br> 
+            We do this by prioritizing nutrition and listening to our consumers to create a healthy dressing that seamlessly fits into your active lifestyle.
+
           </p>
         </div><div class="small-image small-image-shown small-image-mission">
           <img class="small-image" src="images/cutting-dill.jpg">
