--- a/products.html
+++ b/products.html
@@ -83,8 +83,9 @@
 			        </div>
 			      </div>
 			    </div>
-			    <p class="ingredients">
+			    <p class="ingredients"><span class="ingredients-fonts">
 			    	Ingredients: water, dijon mustard, almond butter, bragg aminos, lemon juice, nutritional yeast, extra virgin olive oil, organic grass-fed whey protein poweder, garlic 
+			    	</span>
 			    </p>
 	    	</div>
 	    </div>
@@ -122,8 +123,8 @@
 			        </div>
 			      </div>
 			    </div>
-	    		<p class="ingredients">
-	    			Ingredients: organic chickpea, water, organic grass-fed whey protein powder, extra virgin olive oil, sesame oil, rice wine vinegar, bragg aminos, chile garlic sauce, ground ginger 
+	    		<p class="ingredients"><span class="ingredients-fonts">
+	    			Ingredients: organic chickpea, water, organic grass-fed whey protein powder, extra virgin olive oil, sesame oil, rice wine vinegar, bragg aminos, chile garlic sauce, ground ginger </span>
 	    		</p>
 	    	</div>
 	    </div>
@@ -161,8 +162,8 @@
 			        </div>
 			      </div>
 			    </div>
-	    		<p class="ingredients">
-	    			Ingredients: greek yogurt, diced cucumber, organic grass-fed whey protein powder, dill, lemon juice, garlic, salt, pepper 
+	    		<p class="ingredients"><span class="ingredients-fonts">
+	    			Ingredients: greek yogurt, diced cucumber, organic grass-fed whey protein powder, dill, lemon juice, garlic, salt, pepper </span>
 	    		</p>
 	    	</div>
 	    </div>
