compressed the images

--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
           <img class="team-member" src="images/derek.jpg"/>
           <h4>Derek Mansfield</h4>
           <p>
-            <span class="bold">Founder</span> <br> Derek was most recently the president of a Relay Foods -- an e-commerce grocery site. But more recently, he has enjoyed spending his time dressing in a full tux (complete with tophat and monocle) and speaking in a terrible British accent. 
+            <span class="bold">Founder</span> <br> Derek was most recently the president of Relay Foods -- an e-commerce grocery site. But more recently, he has enjoyed spending his time dressing in a full tux (complete with tophat and monocle) and speaking in a terrible British accent. 
           </p>
         </div>
         <div class="col-md-4 clearfix team-member-col">
