--- a/products.html
+++ b/products.html
@@ -93,7 +93,7 @@
 			      </div>
 			    </div>
 			    <p class="ingredients"><span class="ingredients-fonts">
-			    	Ingredients: water, dijon mustard, almond butter, bragg aminos, lemon juice, nutritional yeast, extra virgin olive oil, organic grass-fed whey protein poweder, garlic 
+			    	Ingredients: water, dijon mustard, almond butter, liquid amino acids, lemon juice, nutritional yeast, extra virgin olive oil, organic grass-fed whey protein powder, garlic 
 			    	</span>
 			    </p>
 	    	</div>
@@ -133,7 +133,7 @@
 			      </div>
 			    </div>
 	    		<p class="ingredients"><span class="ingredients-fonts">
-	    			Ingredients: organic chickpea, water, organic grass-fed whey protein powder, extra virgin olive oil, sesame oil, rice wine vinegar, bragg aminos, chile garlic sauce, ground ginger </span>
+	    			Ingredients: organic chickpea, water, organic grass-fed whey protein powder, extra virgin olive oil, sesame oil, rice wine vinegar, liquid amino acids, chile garlic sauce, ground ginger </span>
 	    		</p>
 	    	</div>
 	    </div>
